--- a/src/project.json
+++ b/src/project.json
@@ -16,7 +16,11 @@
                     "version": "1.0.0"
                 }
             },
-            "imports": "dnxcore50"
+            "imports": [
+                "dotnet5.6",
+                "dnxcore50",
+                "portable-net45+win8"
+            ]
         }
     }
 }
